Added Face Verifications to Merchant API
