# routes/merchant.php
@@ -2,6 +2,7 @@
 
 use App\Http\Controllers\api\sdk\BVNController;
 use App\Http\Controllers\api\sdk\DriverLicenseController;
+use App\Http\Controllers\api\sdk\FaceRecognitionController;
 use App\Http\Controllers\api\sdk\FacialController;
 use App\Http\Controllers\api\sdk\NINController;
 use App\Http\Controllers\api\sdk\PassportController;
@@ -24,4 +25,8 @@ Route::prefix('v1')->middleware([\App\Http\Middleware\MerchantApiKey::class, Mer
     Route::post('voters', [VotersController::class, 'merchant']);
 
     Route::post('facial', [FacialController::class, 'check']);
+
+    Route::post('face_detection', [FaceRecognitionController::class, 'merchant'])->withoutMiddleware([MerchantSignatureCheck::class]);
+    Route::post('face_compare', [FaceRecognitionController::class, 'merchant_compare'])->withoutMiddleware([MerchantSignatureCheck::class]);
+    Route::post('face_liveness', [FaceRecognitionController::class, 'merchant_liveness'])->withoutMiddleware([MerchantSignatureCheck::class]);
 });
